# metamaska

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: installation.md
installation/: index.html
metamaska/: __init__.py  payload_classifier.py
scripts/: collect_data.py  train.py
search/: search_index.json
tests/: test_cli.py  test_metamaska.py  test_utils.py
usage/: index.html
