[project]
name = "metamaska"
dynamic = ["version"]
description = "malevolent payload classifier"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Doğan Can Bakır", email = "dogancanbakir@protonmail.com" },
    { name = "Happy Hacking Space", email = "team@happyhacking.space" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "scikit-learn>=1.1.2",
    "huggingface-hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/happyhackingspace/metamaska"
Documentation = "https://happyhackingspace.github.io/metamaska"
Repository = "https://github.com/happyhackingspace/metamaska"

[project.scripts]
metamaska = "metamaska.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "metamaska/_version.py"

[tool.hatch.build.targets.sdist]
include = ["metamaska/"]

[tool.hatch.build.targets.wheel]
packages = ["metamaska"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "mkdocs>=1.5",
    "mkdocs-include-markdown-plugin>=6.0",
    "mkdocs-material>=9.0",
    "mkdocstrings-python>=1.0",
    "mkdocs-material-extensions>=1.0",
    "mkdocs-autorefs>=0.5",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E266", "W503"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["metamaska"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=metamaska --cov-branch --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]
